--- a/templates/adminapp/StudentDetails.html
+++ b/templates/adminapp/StudentDetails.html
@@ -14,12 +14,21 @@
             <form method="post" class="flex flex-col gap-4" onsubmit="return validateForm()">
                 {% csrf_token %}
 
-                <div class="flex items-center">
-                    <input id="rollNumberInput" name="query" class="border border-gray-300 rounded-l-lg p-2 flex-grow" placeholder="Enter Student Id" type="number"
-                        oninput="clearError()" onkeydown="handleKeyPress(event)"/>
-                    <button type="submit" class="text-white p-2 rounded-r-lg" style="background-color:rgb(165, 28, 36);">
-                        <i class="fas fa-search"></i> Search
-                    </button>
+                <div class="flex flex-col md:flex-row md:items-center gap-2">
+                    <select name="batchDropdown" class="border border-gray-300 p-2 rounded w-full md:w-auto" required>
+                        <option disabled selected value="">-- Select a Batch --</option>
+                        {% for batch in batches %}
+                        <option value="{{ batch }}">{{ batch }}</option>
+                        {% endfor %}
+                    </select>
+
+                    <div class="flex flex-grow">
+                        <input id="rollNumberInput" name="query" class="border border-gray-300 rounded-l-lg p-2 flex-grow" placeholder="Enter Student Id" type="number"
+                            oninput="clearError()" onkeydown="handleKeyPress(event)"/>
+                        <button type="submit" class="text-white p-2 rounded-r-lg" style="background-color:rgb(165, 28, 36);">
+                            <i class="fas fa-search"></i> Search
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Error Message for Invalid ID Length -->
